--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -90,12 +90,12 @@
 
     //License Dialog
     <string name="about_yes">OK</string>
-    <string name="about_title">Copyright © 2016  door Gaukler Faun</string>
+    <string name="about_title">Copyright © 2016 by Gaukler Faun&lt;br>Copyright © 2016 by Gerben Voshol</string>
     <string name="about_text">
         &lt;b>Bijdragers:&lt;/b>&lt;br>&lt;br>
 
         &lt;i>Ontwikkeling&lt;/i>&lt;br>
-        Gaukler Faun https://github.com/gerbenvoshol&lt;br> &lt;br>
+        Gerben Voshol https://github.com/gerbenvoshol&lt;br> &lt;br>
 
         &lt;i>Vertalingen&lt;/i>&lt;br>
         Frans: jeberger https://github.com/jeberger&lt;br>
@@ -284,7 +284,7 @@
     <string name="about_intro_summary">Toon het introductie scherm nog een keer.</string>
     <string name="about_changelog">Wijzigingslogboek</string>
     <string name="about_changelog_summary">Open Github-site en bekijk wat er nieuw is ... (internetverbinding vereist)</string>
-    <string name="about_dev">Gaukler Faun</string>
+    <string name="about_dev">Gerben Voshol</string>
     <string name="about_dev_summary">Open mijn profiel op Github (internetverbinding vereist).</string>
     <string name="about_donate">Doneren</string>
     <string name="about_donate_summary">Als je de app leuk vindt, kun je me een donatie doen via Paypal (internetverbinding vereist).</string>
