--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -90,12 +90,12 @@
 
     //License Dialog
     <string name="about_yes">OK</string>
-    <string name="about_title">Copyright © 2016  por Gaukler Faun</string>
+    <string name="about_title">Copyright © 2016 by Gaukler Faun&lt;br>Copyright © 2016 by Gerben Voshol</string>
     <string name="about_text">
         &lt;b>Colaboradores:&lt;/b>&lt;br>&lt;br>
 
         &lt;i>Desenvolvimento&lt;/i>&lt;br>
-        Gaukler Faun https://github.com/gerbenvoshol&lt;br> &lt;br>
+        Gerben Voshol https://github.com/gerbenvoshol&lt;br> &lt;br>
 
         &lt;i>Traduções&lt;/i>&lt;br>
         Francês: jeberger https://github.com/jeberger&lt;br>
@@ -283,7 +283,7 @@
     <string name="about_intro_summary">Mostrar a tela de introdução mais uma vez.</string>
     <string name="about_changelog">Registro de alterações</string>
     <string name="about_changelog_summary">Abrir site do Github e ver o que há de novo ... (requer conexão à internet)</string>
-    <string name="about_dev">Gaukler Faun</string>
+    <string name="about_dev">Gerben Voshol</string>
     <string name="about_dev_summary">Abrir meu perfil no Github (requer conexão à internet).</string>
     <string name="about_donate">Doar</string>
     <string name="about_donate_summary">Se você gosta do aplicativo, pode me fazer uma doação via Paypal (requer conexão à internet).</string>
