--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -69,7 +69,7 @@
     <string name="pau_11" tools:keep="@string/pau_11">休止 | その後: サイド プランク</string>
 
     //License Dialog
-    <string name="about_title">Copyright © 2016  by Gaukler Faun</string>
+    <string name="about_title">Copyright © 2016 by Gaukler Faun&lt;br>Copyright © 2016 by Gerben Voshol</string>
     <string name="about_text">
         For more information visit the project site on github: https://github.com/gerbenvoshol/Sieben&lt;br>&lt;br>
 
@@ -165,7 +165,7 @@
     <string name="about_license">License</string>
     <string name="about_license_summary">The app is licensed under GPL and completely open source and free (as in freedom).</string>
 
-    <string name="about_dev">Gaukler Faun</string>
+    <string name="about_dev">Gerben Voshol</string>
     <string name="about_dev_summary">Open my profile on Github (needs internet connection).</string>
 
     <string name="about_intro">Intro</string>
